[app][Use case #1] Add console view

--- a/app/src/main/res/layout/activity_static.xml
+++ b/app/src/main/res/layout/activity_static.xml
@@ -36,6 +36,11 @@
                 android:text="@string/buy" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/console"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </ScrollView>
 
