[app][Use case #3] Make items clickable in SkusActivity
Clicking on a not yet purchased item should start a purchase procedure,
clicking on a purchased item should consume it.

--- a/app/src/main/res/layout/sku.xml
+++ b/app/src/main/res/layout/sku.xml
@@ -11,6 +11,7 @@
 
     <ImageView
         android:id="@+id/sku_icon"
+        android:contentDescription="@string/icon"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_alignParentLeft="true"
